# collector_events

./: .env  .gitignore  CLAUDE.md  PROVIDER_REFACTORING_PLAN.md  README.md  main.py  market.jsonl  project_structure.txt  pyproject.toml  pyrefly.toml  requirements.txt  structure.txt
.github/: copilot-instructions.md
.state/: telegram_cursor.json
collector_events/: full_sources.md  globalintel_architecture.md  intel_domain_contract.md  structure.txt  telemetry.py  worker_api_migration_plan.md  worldmonitor_sources.md
collector_events.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
collector_events/events_extractors/: Investor_Presentation_Log.md  Investor_Presentation_Log_Small.md  __init__.py  osint_extractor.py  osint_log_cleaner.py  osint_log_translator-batch.py  osint_log_translator-threadpool.py  osint_log_translator.py  osint_log_translator_parallel_common.py  ray_telegram_stealth_actor.py  telegram_relay-1.py  telegram_relay-2.py  telegram_relay.py  telegram_relay_ray.py  telegram_relay_ray_bkp.py  telegram_session_auth.py  translation_engine.env.example  translation_engine_ray.py
collector_events/extractors/: __init__.py  factory.py  provider.py
collector_events/globalintel/: __init__.py  base.py  cache.py  config_env.py  extractor_factory.py  global_tag_manager.py  intel_dump.jsonl  intel_store.py  main.py  main_test.py  main_test_old (2).py  main_test_old.py  mock_intel_items_big.json  mock_intel_items_big_process_result copy.json  mock_intel_items_big_process_result.json  mock_intel_items_large.json  mock_intel_items_test_001.json  mq_test_consumer.py  orchestrator.py  orchestrator_intel_check_009.py  print_results.py  structure.txt  test_extractor.py  utils.py
collector_events/new_versions/: country_resolver_balanced.py  event_processor_balanced.py  prediction_assets_balanced.json  (+1 more)
processors/: currency_strength_calculator.py
tests/: __init__.py
(+175 files in other folders)
