[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "collector_events"
version = "0.1.0"
description = "Global News and Events internet collector"
dependencies = [
    "forex_shared",
    "aiohttp",
    "apscheduler>=3.10,<4",
    "debugpy",
    "pandas",
    "pycountry", 
    "redis>=7.3,<8",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "telethon>=1.38,<2",
    "ray[default]"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["collector_events*"]
